[tool.poetry]
name = "sepasurfer"
version = "0.1.1"
description = "Modern SEPA transaction framework"
authors = ["Michael Blaß <mblass@posteo.net>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
sepaxml = "^2.6.1"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"
hypothesis = "^6.98.9"
pytest = "^8.0.2"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
